| Bug #44232 | Error msg should be improved when collation not supported. | ||
|---|---|---|---|
| Submitted: | 13 Apr 2009 10:29 | Modified: | 14 Jul 2009 15:08 |
| Reporter: | Nidhi Shrotriya | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: DB2SE for IBM i | Severity: | S3 (Non-critical) |
| Version: | 5.1.33 | OS: | Other (IBMi 5.4) |
| Assigned to: | CPU Architecture: | Any | |
[5 May 2009 9:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73365 2895 Narayanan V 2009-05-05 Bug#44232 Error msg should be improved when collation not supported. When a user selects an unsupported character set for an IBMDB2I table, error 2501 or 2511 will be returned, giving the appearance of an internal programming error. This patch consolidates these errors into a single descriptive error message for the common case of an unsupported character set. The new error number is 2504 and indicates a user error. The errors 2501 and 2511 remain to indicate cases of internal programming errors. @ storage/ibmdb2i/db2i_charsetSupport.cc Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set. @ storage/ibmdb2i/db2i_conversion.cc Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set. @ storage/ibmdb2i/db2i_errors.cc Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set. @ storage/ibmdb2i/db2i_errors.h Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set.
[5 May 2009 9:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73367 2895 Narayanan V 2009-05-05 Bug#44232 Error msg should be improved when collation not supported. When a user selected an unsupported character set for an IBMDB2I table, error 2501 or 2511 may have been returned, giving the appearance of an internal programming error. This patch consolidates these errors into a single descriptive error message for the common case of an unsupported character set. The new error number is 2504 and indicates a user error. The errors 2501 and 2511 remain to indicate cases of internal programming errors. @ storage/ibmdb2i/db2i_charsetSupport.cc Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set. @ storage/ibmdb2i/db2i_conversion.cc Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set. @ storage/ibmdb2i/db2i_errors.cc Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set. @ storage/ibmdb2i/db2i_errors.h Bug#44232 Error msg should be improved when collation not supported. consolidate errors 2501 and 2511 into a single descriptive error message for the common case of an unsupported character set.
[14 May 2009 10:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74024 2880 Narayanan V 2009-05-14 Bug#44232 Error msg should be improved when collation not supported. checking in a test case that will reproduce the error on v5r4. @ mysql-test/suite/ibmdb2i/include/have_i54.inc Bug#44232 Error msg should be improved when collation not supported. @ mysql-test/suite/ibmdb2i/r/ibmdb2i_bug_44232.result Bug#44232 Error msg should be improved when collation not supported. @ mysql-test/suite/ibmdb2i/t/ibmdb2i_bug_44232.test Bug#44232 Error msg should be improved when collation not supported.
[28 May 2009 8:13]
Bugs System
Pushed into 5.1.36 (revid:joro@sun.com-20090528073639-yohsb4q1jzg7ycws) (version source revid:jimw@mysql.com-20090515174051-ndjvfd1e9hc9k9c3) (merge vers: 5.1.36) (pib:6)
[17 Jun 2009 19:21]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090616183122-chjzbaa30qopdra9) (version source revid:v.narayanan@sun.com-20090514113427-5tsfzc3kuqn9ks3c) (merge vers: 6.0.12-alpha) (pib:11)
[14 Jul 2009 15:08]
MC Brown
A note has been added to the 5.1.36 and 5.4.4. changelog: Trying to use an unsupported character set on an IBMDB2I table would produce DB2 error 2501 or 2511. The error has been updated to produce Error 2504 (Character set is unsupported)
[12 Aug 2009 22:36]
Paul DuBois
Noted in 5.4.2 changelog because next 5.4 version will be 5.4.2 and not 5.4.4.
[15 Aug 2009 1:54]
Paul DuBois
Ignore previous comment about 5.4.2.
[26 Aug 2009 13:45]
Bugs System
Pushed into 5.1.37-ndb-7.0.8 (revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[26 Aug 2009 13:46]
Bugs System
Pushed into 5.1.37-ndb-6.3.27 (revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (version source revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (merge vers: 5.1.37-ndb-6.3.27) (pib:11)
[26 Aug 2009 13:48]
Bugs System
Pushed into 5.1.37-ndb-6.2.19 (revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (version source revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (merge vers: 5.1.37-ndb-6.2.19) (pib:11)
[27 Aug 2009 16:32]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20090827163030-6o3kk6r2oua159hr) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[7 Oct 2009 20:26]
Paul DuBois
The 5.4 fix has been pushed to 5.4.2.

Description: Some tests fail with mysql-5.1.33 and --default-storage-engine=ibmdb2i on v5r4 as below. > main.ctype_ascii > failed: 1296: Got error 2501 'Error opening codeset conversion from > IBM-367 to IBM-500 (errno = 22)' from IBMDB2I > main.ctype_cp1250_ch > mysqltest: At line 19: query 'insert into t1 values ("a"),("ab"), > ("abc")' failed: 1296: Got error 2501 'Error opening codeset > conversion from IBM-1251 to IBM-1025 (errno = 2)' from IBMDB2I > main.ctype_cp1251 > mysqltest: At line 19: query 'insert into t1 values ("a"),("ab"), > ("abc")' failed: 1296: Got error 2501 'Error opening codeset > conversion from IBM-1251 to IBM-1025 (errno = 2)' from IBMDB2I > main.func_time > mysqltest: At line 745: query 'insert into t1 values > ('070514-000000')' failed: 1296: Got error 2501 'Error opening > codeset conversion from IBM-367 to IBM-500 (errno = 22)' from IBMDB2I > This is due to lack of support for the collations on v5r4. I believe improving the error msg to be more understandable something like 'Not supported' should be considered. How to repeat: As mentioned in description.