Bug#44232 Error msg should be improved when collation not supported.

When a user selected an unsupported character set for an
IBMDB2I table, error 2501 or 2511 may have been returned,
giving the appearance of an internal programming error.

This patch consolidates these errors into a single descriptive
error message for the common case of an unsupported character
set.

The new error number is 2504 and indicates a user error.
The errors 2501 and 2511 remain to indicate cases of internal
programming errors.

storage/ibmdb2i/db2i_charsetSupport.cc:
  Bug#44232 Error msg should be improved when collation not supported.
          
  consolidate errors 2501 and 2511 into a single
  descriptive error message for the common case
  of an unsupported character set.
storage/ibmdb2i/db2i_conversion.cc:
  Bug#44232 Error msg should be improved when collation not supported.
          
  consolidate errors 2501 and 2511 into a single
  descriptive error message for the common case
  of an unsupported character set.
storage/ibmdb2i/db2i_errors.cc:
  Bug#44232 Error msg should be improved when collation not supported.
          
  consolidate errors 2501 and 2511 into a single
  descriptive error message for the common case
  of an unsupported character set.
storage/ibmdb2i/db2i_errors.h:
  Bug#44232 Error msg should be improved when collation not supported.
          
  consolidate errors 2501 and 2511 into a single
  descriptive error message for the common case
  of an unsupported character set.